--- a/src/component/ReadyNewOptions/ReadyNewOptions.css
+++ b/src/component/ReadyNewOptions/ReadyNewOptions.css
@@ -39,3 +39,12 @@
   color: "#eddfd0";
   cursor: pointer;
 }
+
+@media screen and (max-width: 600px) {
+  .options {
+    font-size: 10px;
+  }
+  .options2 {
+    font-size: 10px;
+  }
+}
