--- a/src/component/heroSection/HeroSection.css
+++ b/src/component/heroSection/HeroSection.css
@@ -28,10 +28,12 @@
   margin-left: 8%;
 }
 
-/* @media screen and (min-width: 1800px) {
+@media screen and (max-width: 1700px) {
   .textsize {
-    margin-left: 10%;
-    font-size: 5rem;
+    margin-left: 20%;
+    font-size: 2.9rem;
+    top: 42rem;
+    left: 0%;
   }
   .hero {
     position: relative;
@@ -39,4 +41,49 @@
     right: 0;
     width: 100%;
   }
-} */
+}
+
+@media screen and (max-width: 1500px) {
+  .textsize {
+    margin-left: 20%;
+    font-size: 2.4rem;
+    top: 42rem;
+    left: 0%;
+  }
+  .hero {
+    position: relative;
+    top: 0;
+    right: 0;
+    width: 100%;
+  }
+}
+
+@media screen and (max-width: 1200px) {
+  .textsize {
+    margin-left: 20%;
+    font-size: 1.6rem;
+    top: 40rem;
+    left: 0%;
+  }
+  .hero {
+    position: relative;
+    top: 0;
+    right: 0;
+    width: 100%;
+  }
+}
+
+@media screen and (max-width: 650px) {
+  .textsize {
+    margin-left: 10%;
+    font-size: 1.3rem;
+    top: 38rem;
+    left: 0%;
+  }
+  .hero {
+    position: relative;
+    top: 0;
+    right: 0;
+    width: 100%;
+  }
+}
